<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <!--name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_17sdp"

            />

        <TextView
            android:id="@+id/item_nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_17sdp"
            tools:text="Abdelrahman magdy" />
    </LinearLayout>
    <!--nIN-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/nIN"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/item_nINTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_17sdp"
            tools:text="Egyptian" />
    </LinearLayout>

    <!--nationality-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/nationality"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/item_nationalityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_15sdp"
            tools:text="Egyptian" />

    </LinearLayout>

</LinearLayout>