<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeDataRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:id="@+id/parentLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.activities.home.HomeActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registrationNumberTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:minHeight="@dimen/_50sdp">

                <EditText
                    android:id="@+id/registrationNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registrationNumber"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/dataCL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:context=".ui.activities.home.HomeActivity">

                <!--titleData-->
                <LinearLayout
                    android:id="@+id/titleDataLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/drawable_status_borders"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!--commercialName-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/commercial_name"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:id="@+id/commercialNameTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:text="Abdelrahman magdy" />
                    </LinearLayout>
                    <!--expiryDate-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/expiryDate"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:id="@+id/expiryDateTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_16sdp"
                            tools:text="2020/11/25" />
                    </LinearLayout>

                </LinearLayout>
                <!--humanPartnersData-->
                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/humanPartnersBT"
                    android:layout_below="@+id/titleDataLL"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fillViewport="true"
                    android:fitsSystemWindows="true"
                    android:focusableInTouchMode="true"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/commercialDataRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/human_partners_list_items" />
                </androidx.core.widget.NestedScrollView>

                <!--humanPartnersDataVisibility-->
                <Button

                    android:id="@+id/humanPartnersBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/drawable_curve_bg"
                    android:text="@string/humanPartnersSTR"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    tools:text="@string/humanPartnersSTR" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>